# collab-public

./: .gitignore  .mcp.json  CLAUDE-CODE-PLUGIN.md  CLAUDE.md
.claude-plugin/: marketplace.json
.github/: cla-signatures.json
collab-electron/: .gitignore  .prettierignore  electron.vite.config.ts  package.json  tsconfig.web.json
collab-electron/cli/: collab-cli.mjs
collab-electron/resources/: collab-claude-hook.sh  collab-send-file.sh
collab-electron/scripts/: after-pack-pty.cjs  dev.mjs  install-local.sh  local-bin.mjs  notarize.cjs  package.mjs  postinstall.mjs  run-local-bin.mjs  upload-to-github.cjs
collab-electron/src/main/: acp-agent.ts  agent-activity.ts  analytics.ts  canvas-persistence.ts  canvas-rpc.ts  cdp.ts  claude-rpc.ts  cli-installer.ts  colorize-urls.ts  config.ts  env.d.ts  external-editor.ts  file-filter.test.ts  file-filter.ts  files.test.ts  files.ts  git-replay-worker.ts  git-replay.ts  hyperlink-paths.ts  image-service.ts  index.ts  (+24 more)
collab-tauri2/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
collab-tauri2/docs/: feature-audit.md
collab-tauri2/src-react/: main.tsx
collab-tauri2/src-tauri/: Cargo.toml  tauri.conf.json
collab-tauri2/src-tauri/capabilities/: default.json
collab-tauri2/src-tauri/src/: acp_agent.rs  agent_activity.rs  analytics.rs  cli.rs  colorize_urls.rs  config.rs  crash_handler.rs  dialog.rs  extra.rs  file_filter.rs  fs.rs  image.rs  import.rs  integrations.rs  lib.rs  main.rs  menu.rs  pty.rs  session_meta.rs  updater.rs  watcher.rs  wikilinks.rs  workspace.rs
(+100 files in other folders)
