[package]
name = "collaborator"
version = "0.1.0"
edition = "2021"
authors = ["Collaborator Team"]

[lib]
name = "collaborator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "6"
dirs = "5"
reqwest = { version = "0.11", features = ["json"] }
image = "0.25"
thiserror = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
mime_guess = "2"
regex = "1"
scraper = "0.22"
